# hashi_c

./: .gitmodules  CMakeLists.txt  README.md  fragment_shader.glsl  main.c  settings.conf  vertex_shader.glsl
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: CMakeLists.txt  grid.c  grid.h  settings.h
